2005-12-09 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b45
 
 * Change: New icons for navigation, placed into images/icons

 * Change: Moved icon definition for navigation into includes/definitions/navIcons.php

2005-12-08 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b44

 * Change: Added sort parameter to makeSectionTabs

 * "Fix": Translate "No Skin" in confwizard.

 * Change: Move checkImageMagick() into lib/setup.php

 * Change: Beautified setup/check_imagemagick.php and added check for optional bins.

 * Change Beautified setup/check_versions.php

 * Fix: More use of gTranslate in confwizard.

 * Change: Little css Change in config.css

2005-12-08 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b43

 * Change: Params of ImCmd

 * Change: ImCmd optimized for IM6

 * New: Optimized thumbnail creation for IM6

 * Change: removed unused function vd() (sorry joan ;))

 * Change: Added posibility for negative test with ! in testRequirement()

 * Change: Adde case 'albumIsRoot' to testRequirement()

 * Fix: Splitted "delete album" in view_album into delete root album and delete subalbum

 * Change: Only popup option are available in selectbox in view_album, ALL are available in view_photo

 * Change: renamed compress_image to compressImage and changed params

 * Change: Optimized compressImage for IM6

 * Change: general code nicify.

 * New: Added HQ Paramater for ImageMagick, if yes, then resized have a slightly higher quality.

2005-12-05 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b42

 * Change: Sort albumProperties alphabetically.

 * Change: Added size 50 for album titles for better readability.

 * Change: Moved "voter class" at first position in album properties.

 * Change: Some code nicify.

 * Change: Updated bars002 skin.

2005-12-04 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b41

 * Fix: administer_startpage.php should open itself as a "real" popup when embedded.

 * Fix: Changed Windows lineendings to unix style in ecard_preview.php
