@@ -1,3 +1,9 @@
+2005-12-09 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b46
+
+ * Fix: Display of ImageMaps was broken when Imagemaps in the middle where removed.
+
+ * Fix: DebugMessage in lib/lang prevent login
+
 2005-12-09 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b45
  
  * Change: New icons for navigation, placed into images/icons
